@@ -71,9 +71,28 @@ module Sidebar = struct
      >>
 end
 
-let body ~title ~headers ~content =
+let body ?google_analytics ~title ~headers ~content () =
   (* Cannot be inlined below as the $ is interpreted as an antiquotation *)
   let js_init = [`Data "$(document).foundation(); hljs.initHighlightingOnLoad();"] in
+  let ga =
+    match google_analytics with
+    | None -> []
+    | Some a -> <:html<
+         <script type="text/javascript">
+           //<![CDATA[
+           var _gaq = _gaq || [];
+           _gaq.push(['_setAccount', '$[`Data a]$']);
+           _gaq.push(['_setDomainName', 'openmirage.org']);
+           _gaq.push(['_trackPageview']);
+
+           (function() {
+              var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+              ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            })();
+           //]]>
+         </script> >>
+  in
   <:html<
     <head>
       <meta charset="utf-8" />
@@ -83,6 +102,7 @@ let body ~title ~headers ~content =
       <link rel="stylesheet" href="/css/magula.css"> </link>
       <link rel="stylesheet" href="/css/site.css"> </link> 
       <script src="/js/vendor/custom.modernizr.js"> </script>
+      $ga$
       $headers$
     </head>
     <body>
